Closed
Bug 1678032
Opened 5 years ago
Closed 5 years ago
Frequent js/src/jit-test/tests/basic/testLet.js | Unknown (code -11, args "--baseline-eager") [0.5 s]
Categories
(Core :: JavaScript Engine: JIT, defect, P1)
Core
JavaScript Engine: JIT
Tracking
()
RESOLVED
FIXED
85 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox83 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: tcampbell)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Crash Data
Attachments
(1 file)
Filed by: ccoroiu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=322179105&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/aJIdCv3kRbqKDY_T9cb8iQ/runs/0/artifacts/public/logs/live_backing.log
[task 2020-11-18T13:41:47.990Z] TEST-PASS | js/src/jit-test/tests/basic/testLetOverridingArgs.js | Success (code 0, args "--ion-eager --ion-offthread-compile=off --more-compartments") [0.3 s]
[task 2020-11-18T13:41:48.016Z] Exit code: -11
[task 2020-11-18T13:41:48.016Z] FAIL - basic/testLet.js
[task 2020-11-18T13:41:48.016Z] TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/basic/testLet.js | Unknown (code -11, args "--baseline-eager") [0.5 s]
[task 2020-11-18T13:41:48.016Z] INFO exit-status : -11
[task 2020-11-18T13:41:48.016Z] INFO timed-out : False
[task 2020-11-18T13:41:48.033Z] TEST-PASS | js/src/jit-test/tests/basic/testLocaleCompare.js | Success (code 0, args "") [0.2 s]
[task 2020-11-18T13:41:48.103Z] TEST-PASS | js/src/jit-test/tests/basic/testLocaleCompare.js | Success (code 0, args "--baseline-eager") [0.3 s]```
Comment 1•5 years ago
|
||
Looks like Bug 1677657 caused the failures.
Ted, could you help us out with this one?
Thank you.
Flags: needinfo?(tcampbell)
Regressed by: 1677657
Summary: Intermittent js/src/jit-test/tests/basic/testLet.js | Unknown (code -11, args "--baseline-eager") [0.5 s] → Frequent js/src/jit-test/tests/basic/testLet.js | Unknown (code -11, args "--baseline-eager") [0.5 s]
Updated•5 years ago
|
Has Regression Range: --- → yes
Keywords: regression
| Assignee | ||
Comment 2•5 years ago
|
||
Thanks! I can reproduce this.
Assignee: nobody → tcampbell
Severity: S4 → S3
Flags: needinfo?(tcampbell)
Priority: P5 → P1
| Assignee | ||
Comment 3•5 years ago
|
||
Pushed by tcampbell@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/df3c05745361
Fix hazard with BaseScript::extent(). r=sfink
| Comment hidden (Intermittent Failures Robot) |
Comment 6•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox85:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
Comment 7•5 years ago
|
||
Set release status flags based on info from the regressing bug 1677657
status-firefox83:
--- → unaffected
status-firefox84:
--- → unaffected
status-firefox-esr78:
--- → unaffected
| Comment hidden (Intermittent Failures Robot) |
Updated•5 years ago
|
Crash Signature: [@ js::BaseScript::BaseScript(unsigned char*, JSObject*, js::ScriptSourceObject*, js::SourceExtent const&, unsigned int)]
You need to log in
before you can comment on or make changes to this bug.
Description
•