Bug 1678032 - Fix hazard with BaseScript::extent(). r=sfink

Differential Revision: https://phabricator.services.mozilla.com/D97639